<resources>
    <string name="app_name">hackathon</string>

    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="input_id">아이디를 입력하세요</string>
    <string name="input_pw">비밀번호를 입력하세요</string>

    <string name="pw_check">비밀번호 확인</string>
    <string name="input_pw_check">비밀번호를 다시 입력하세요</string>
    <string name="already_signup">이미 가입했다면,&#160;&#160;</string>
    <string name="not_signup">가입되어 있지 않다면,&#160;&#160;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="spinner_home">
        <item>경제</item>
        <item>법률</item>
        <item>예절</item>
    </string-array>
    <string name="request_modify">수정 요청</string>
    <string name="inquire">문의하기</string>

    <string-array name="spinner_dictionary">
        <item>금융</item>
        <item>사회</item>
        <item>공공</item>
    </string-array>
</resources>