<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature.auth.SignupActivity">

    <ImageView
        android:id="@+id/iv_signup_logo"
        style="@style/start_iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        style="@style/start_lay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_signup_logo">

        <TextView
            style="@style/start_input_text"
            android:text="@string/id"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/start_input_lay">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_signup_id"
                style="@style/start_input"
                android:inputType="text"
                android:hint="@string/input_id"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/start_input_text"
            android:text="@string/pw"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/start_input_lay"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_signup_pw"
                style="@style/start_input"
                android:inputType="textPassword"
                android:hint="@string/input_pw" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/start_input_text"
            android:text="@string/pw_check"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/start_input_lay"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_signup_pw_check"
                style="@style/start_input"
                android:inputType="textPassword"
                android:hint="@string/input_pw_check"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        style="@style/btn"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/btn_signup"
        app:layout_constraintEnd_toEndOf="@id/btn_signup"
        app:layout_constraintTop_toBottomOf="@id/btn_signup">
        <TextView
            style="@style/start_move_text"
            android:text="@string/already_signup"
            android:fontFamily="@font/notosanskr_light"/>
        <TextView
            android:id="@+id/tv_signup_login"
            style="@style/start_move_text"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/login"
            android:textColor="@color/main300"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>